[package]
name = "readwise-epub"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.13.3", default-features = false, features = ["toml"] }
dirs = "5.0.1"
itertools = "0.10.5"
reqwest = { version = "0.11.17", features = ["gzip", "brotli", "deflate"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = { version = "0.3.21", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1.28.1", features = ["full"] }
